Libraries versions actualization. (#572)
Fix deprecated code usages.
Code cleanup.